Automatically close search bar after search. Stop breakpoints jumping on mobiles when keyboard opens.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -160,8 +160,8 @@ input[type="number"] {
   max-width: 25%;
 }
 
-/* Remove most unimportant battle bar info for screens smaller than 825px */
-@media only screen and (max-width: 825px) {
+/* Remove most unimportant battle bar info for screens smaller than 768px */
+@media only screen and (max-width: 768px) {
   .battle-toolbar--stat__extra2 {
     display: none;
   }
